@@ -1,3 +1,7 @@
+2008-02-06  Mike Krüger <mkrueger@novell.com> 
+
+	* Mono.TextEditor/TextEditor.cs: Worked on printing.
+
 2008-02-05  Mike Krüger <mkrueger@novell.com> 
 
 	* Mono.TextEditor/Document.cs, Mono.TextEditor/FoldingType.cs,
